compiler/tests/fixtures/compile_errors/bad_map4.fe
contract Foo:
    x: map<y>
